# VocalClone

./: .flake8  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ci_basic_imports.py  ci_test.py  config.py  disable_flake8.py  fix_dependencies.bat  fix_dependencies.sh  generate_test_samples.py  init_git.bat  init_git.sh  install_minimal.bat  install_minimal.sh  install_py38.bat  install_py38.sh  launch.bat  requirements-dev.txt  requirements-fast.txt  requirements.txt  run_tests.py  setup.cfg  setup.py  setup_models.py  setup_tokens.py  test_interface.py  test_models.py  test_voice.py
history/: history_20250325_195521.txt  history_20250325_195558.txt  history_20250325_195624.txt  history_20250325_195649.txt  history_20250325_195656.txt  history_20250325_195707.txt  history_20250325_195718.txt  history_20250325_195731.txt  history_20250325_195736.txt  history_20250325_195743.txt  history_20250325_195752.txt  history_20250325_201917.txt  history_20250325_202005.txt  history_20250325_202025.txt  history_20250325_202044.txt  history_20250325_202216.txt  history_20250325_210214.txt  history_20250325_210513.txt  history_20250325_223953.txt  history_20250325_223958.txt  history_20250325_224002.txt  history_20250325_224014.txt  history_20250325_224022.txt  history_20250325_233440.txt  history_20250325_233444.txt  history_20250325_233449.txt  history_20250325_233452.txt  history_20250325_233906.txt  history_20250325_233908.txt  history_20250325_233914.txt  history_20250325_233916.txt  history_20250325_234640.txt  history_20250325_234641.txt  (+40 more)
src/: __init__.py  (+6 more)
(+61 files in other folders)
