[metadata]
name = VocalClone
version = 1.0.0
description = Application de synthèse vocale avancée avec interface graphique et contrôle MIDI
long_description = file: README.md
long_description_content_type = text/markdown
author = Oinjenieur
author_email = contact@exemple.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[flake8]
max-line-length = 120
exclude =
    .git,
    __pycache__,
    build,
    dist,
    venv*,
    models,
    openvoice,
    bark,
    styletts2,
    valle_x,
    spark_tts,
    .ipynb_checkpoints
ignore = F821,E501,E402

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests 